Installation of Tailwind CSS

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=88a3cf7087938d9db497b4dd62b7e2fb",
+    "/css/app.css": "/css/app.css?id=338b38e3a78c846c148f702d98033af8"
 }
