Update on ENV Example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6xt8Mw/pFaN5GAhei8/PJh8Jt119IGygzPa3j4Kt4Y8=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
